Timeline bugs fixed

--- a/Depo/Depo/Presentation/UserStories/For You/View/Cells/ForYouTimelineTableViewCell.xib
+++ b/Depo/Depo/Presentation/UserStories/For You/View/Cells/ForYouTimelineTableViewCell.xib
@@ -18,13 +18,6 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bNM-ff-18b">
                     <rect key="frame" x="8" y="8" width="683" height="445"/>
                     <subviews>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="byv-TI-rAa">
-                            <rect key="frame" x="651" y="8" width="24" height="24"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="24" id="E9o-wX-Ieo"/>
-                                <constraint firstAttribute="width" constant="24" id="cai-EH-xAD"/>
-                            </constraints>
-                        </imageView>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8nQ-Z7-egT">
                             <rect key="frame" x="8" y="10" width="24" height="24"/>
                             <constraints>
@@ -33,7 +26,7 @@
                             </constraints>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hkx-q6-kgb">
-                            <rect key="frame" x="40" y="10" width="595" height="24"/>
+                            <rect key="frame" x="40" y="10" width="41.333333333333343" height="24"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="24" id="2nA-aT-oXg"/>
                             </constraints>
@@ -73,6 +66,18 @@
                                 <action selector="shareButtonTapped:" destination="t0W-I5-z73" eventType="touchUpInside" id="YLx-yo-cq7"/>
                             </connections>
                         </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ljy-mc-rDp">
+                            <rect key="frame" x="651" y="8" width="24" height="24"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="24" id="OU1-UU-h1y"/>
+                                <constraint firstAttribute="height" constant="24" id="wfW-w6-V61"/>
+                            </constraints>
+                            <state key="normal" title="Button"/>
+                            <buttonConfiguration key="configuration" style="plain" image="iconCancelBorder"/>
+                            <connections>
+                                <action selector="closeButtonTap:" destination="t0W-I5-z73" eventType="touchUpInside" id="Zrf-EM-cWB"/>
+                            </connections>
+                        </button>
                     </subviews>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <constraints>
@@ -80,7 +85,6 @@
                         <constraint firstItem="GQE-5P-Y5X" firstAttribute="top" secondItem="tkb-xE-WEf" secondAttribute="bottom" constant="8" id="4qY-Tk-V7g"/>
                         <constraint firstAttribute="trailing" secondItem="Yvz-YH-daC" secondAttribute="trailing" constant="8" id="4tO-37-lqQ"/>
                         <constraint firstItem="8nQ-Z7-egT" firstAttribute="leading" secondItem="bNM-ff-18b" secondAttribute="leading" constant="8" id="6Rs-YE-QxO"/>
-                        <constraint firstItem="byv-TI-rAa" firstAttribute="leading" secondItem="hkx-q6-kgb" secondAttribute="trailing" constant="16" id="74r-lI-LUi"/>
                         <constraint firstAttribute="trailing" secondItem="GQE-5P-Y5X" secondAttribute="trailing" constant="8" id="9za-8k-LXG"/>
                         <constraint firstItem="Yvz-YH-daC" firstAttribute="top" secondItem="8nQ-Z7-egT" secondAttribute="bottom" constant="12" id="DQb-K4-iuN"/>
                         <constraint firstItem="gxM-gn-IqF" firstAttribute="leading" secondItem="bNM-ff-18b" secondAttribute="leading" constant="8" id="F6Z-yo-gWD"/>
@@ -88,14 +92,14 @@
                         <constraint firstItem="6tK-5L-AHM" firstAttribute="centerX" secondItem="tkb-xE-WEf" secondAttribute="centerX" id="HZx-Is-IYt"/>
                         <constraint firstItem="8nQ-Z7-egT" firstAttribute="top" secondItem="bNM-ff-18b" secondAttribute="top" constant="10" id="Ibi-FP-42o"/>
                         <constraint firstAttribute="trailing" secondItem="tkb-xE-WEf" secondAttribute="trailing" constant="8" id="Ntt-S5-5aa"/>
+                        <constraint firstAttribute="trailing" secondItem="ljy-mc-rDp" secondAttribute="trailing" constant="8" id="PNp-fo-KLG"/>
                         <constraint firstItem="hkx-q6-kgb" firstAttribute="top" secondItem="bNM-ff-18b" secondAttribute="top" constant="10" id="PlW-Rs-fu7"/>
                         <constraint firstAttribute="bottom" secondItem="GQE-5P-Y5X" secondAttribute="bottom" constant="8" id="Uxm-FU-cGm"/>
                         <constraint firstItem="tkb-xE-WEf" firstAttribute="leading" secondItem="bNM-ff-18b" secondAttribute="leading" constant="8" id="YN8-cN-gEC"/>
-                        <constraint firstItem="byv-TI-rAa" firstAttribute="top" secondItem="bNM-ff-18b" secondAttribute="top" constant="8" id="bCg-T0-iep"/>
                         <constraint firstAttribute="bottom" secondItem="tkb-xE-WEf" secondAttribute="bottom" constant="45" id="coH-4D-dbV"/>
                         <constraint firstItem="tkb-xE-WEf" firstAttribute="top" secondItem="Yvz-YH-daC" secondAttribute="bottom" constant="12" id="dX0-qn-vx0"/>
-                        <constraint firstAttribute="trailing" secondItem="byv-TI-rAa" secondAttribute="trailing" constant="8" id="hd5-FV-jiV"/>
                         <constraint firstItem="Yvz-YH-daC" firstAttribute="leading" secondItem="bNM-ff-18b" secondAttribute="leading" constant="8" id="hmE-K1-yYB"/>
+                        <constraint firstItem="ljy-mc-rDp" firstAttribute="top" secondItem="bNM-ff-18b" secondAttribute="top" constant="8" id="kl0-lN-18F"/>
                         <constraint firstAttribute="bottom" secondItem="gxM-gn-IqF" secondAttribute="bottom" constant="8" id="ny2-m4-1dZ"/>
                         <constraint firstItem="6tK-5L-AHM" firstAttribute="centerY" secondItem="tkb-xE-WEf" secondAttribute="centerY" id="vvd-ko-wGz"/>
                     </constraints>
@@ -112,7 +116,7 @@
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
                 <outlet property="bgView" destination="bNM-ff-18b" id="ORP-NK-NtC"/>
-                <outlet property="closeImageView" destination="byv-TI-rAa" id="nP6-jJ-NJg"/>
+                <outlet property="closeButton" destination="ljy-mc-rDp" id="70C-x9-8DM"/>
                 <outlet property="descriptionLabel" destination="Yvz-YH-daC" id="fwO-Bj-DuC"/>
                 <outlet property="playImageView" destination="6tK-5L-AHM" id="lDK-Na-jfC"/>
                 <outlet property="saveButton" destination="gxM-gn-IqF" id="hC4-Fe-y3b"/>
@@ -125,6 +129,7 @@
         </view>
     </objects>
     <resources>
+        <image name="iconCancelBorder" width="24" height="24"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
