--- a/Depo/Depo/Presentation/SubViews/ViewForPopUp/PopUpSubViews/FreeUpSpacePopUp/FreeUpSpacePopUp.xib
+++ b/Depo/Depo/Presentation/SubViews/ViewForPopUp/PopUpSubViews/FreeUpSpacePopUp/FreeUpSpacePopUp.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -11,25 +11,25 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="FreeUpSpacePopUp" customModule="Billo" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="172"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="160"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eNd-Lf-Xnb">
-                    <rect key="frame" x="16" y="77" width="343" height="42"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eNd-Lf-Xnb">
+                    <rect key="frame" x="16" y="77" width="200" height="71"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="42" id="x62-ui-oUY"/>
+                        <constraint firstAttribute="width" constant="200" id="6TR-6X-tEa"/>
                     </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Alanın Dolmak Üzere!" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5bF-UL-a8f">
-                    <rect key="frame" x="62" y="18" width="297" height="20.5"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5bF-UL-a8f">
+                    <rect key="frame" x="62" y="18" width="297" height="0.0"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="popupCloudBackup" translatesAutoresizingMaskIntoConstraints="NO" id="15l-Sg-8pX">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="freeUpCloudBackUp" translatesAutoresizingMaskIntoConstraints="NO" id="15l-Sg-8pX">
                     <rect key="frame" x="16" y="12" width="30" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="JR0-v2-vUi"/>
@@ -38,61 +38,72 @@
                 </imageView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dyj-bv-ETM">
                     <rect key="frame" x="337" y="15" width="24" height="24"/>
-                    <state key="normal" image="iconCancelBorder"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="24" id="FER-Ar-MiV"/>
+                        <constraint firstAttribute="width" constant="24" id="SBr-bx-5p9"/>
+                    </constraints>
+                    <state key="normal" image="iconCancelUnborderV2"/>
                     <connections>
                         <action selector="onCancelButton" destination="iN0-l3-epB" eventType="touchUpInside" id="QGc-l1-3VH"/>
                     </connections>
                 </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yZg-TM-xac">
                     <rect key="frame" x="0.0" y="60" width="375" height="1"/>
-                    <color key="backgroundColor" white="0.0" alpha="0.2040614298" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="backgroundColor" red="0.49803921568627452" green="0.73725490196078436" blue="0.83529411764705885" alpha="0.2040614298" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="1" id="gxC-aE-vpm"/>
                     </constraints>
                 </view>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tCv-r8-d7f">
-                    <rect key="frame" x="16" y="133" width="46" height="30"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tCv-r8-d7f" customClass="WhiteButton" customModule="Billo" customModuleProvider="target">
+                    <rect key="frame" x="232" y="81" width="135" height="63"/>
+                    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                     <state key="normal" title="Button"/>
+                    <buttonConfiguration key="configuration" style="filled" title="Button">
+                        <fontDescription key="titleFontDescription" name="GTAmericaLC-Md" family="GT America LC" pointSize="16"/>
+                    </buttonConfiguration>
                     <connections>
                         <action selector="onTapFreeAppSpaceButton:" destination="iN0-l3-epB" eventType="touchUpInside" id="rpY-Sb-iIF"/>
                     </connections>
                 </button>
             </subviews>
-            <color key="backgroundColor" name="secondaryBackground"/>
+            <color key="backgroundColor" name="tint"/>
             <constraints>
-                <constraint firstItem="eNd-Lf-Xnb" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="1ni-Lb-dCu"/>
                 <constraint firstAttribute="trailing" secondItem="yZg-TM-xac" secondAttribute="trailing" id="2Fl-as-TT3"/>
+                <constraint firstAttribute="bottom" secondItem="eNd-Lf-Xnb" secondAttribute="bottom" constant="12" id="2Y2-EK-knI"/>
                 <constraint firstItem="dyj-bv-ETM" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="15" id="2i7-iE-pD7"/>
-                <constraint firstItem="tCv-r8-d7f" firstAttribute="top" secondItem="eNd-Lf-Xnb" secondAttribute="bottom" constant="14" id="7cW-iq-jJv"/>
+                <constraint firstItem="eNd-Lf-Xnb" firstAttribute="top" secondItem="yZg-TM-xac" secondAttribute="bottom" constant="16" id="6Fx-pk-vYV"/>
                 <constraint firstAttribute="trailing" secondItem="5bF-UL-a8f" secondAttribute="trailing" constant="16" id="J29-XO-5FQ"/>
+                <constraint firstAttribute="trailing" secondItem="tCv-r8-d7f" secondAttribute="trailing" constant="8" id="Sno-RY-Adb"/>
                 <constraint firstItem="15l-Sg-8pX" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="ThG-9r-CSs"/>
                 <constraint firstAttribute="trailing" secondItem="dyj-bv-ETM" secondAttribute="trailing" constant="14" id="WPO-ci-3LK"/>
-                <constraint firstItem="tCv-r8-d7f" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="YeC-jR-fds"/>
-                <constraint firstAttribute="trailing" secondItem="eNd-Lf-Xnb" secondAttribute="trailing" constant="16" id="ZF2-tX-7f9"/>
                 <constraint firstItem="yZg-TM-xac" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="bo0-4i-guN"/>
+                <constraint firstAttribute="bottom" secondItem="tCv-r8-d7f" secondAttribute="bottom" constant="16" id="h2E-xb-AMp"/>
+                <constraint firstItem="eNd-Lf-Xnb" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="h6S-Wq-FZe"/>
                 <constraint firstItem="5bF-UL-a8f" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="18" id="jHG-bq-q81"/>
                 <constraint firstItem="15l-Sg-8pX" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="12" id="lGm-hA-542"/>
-                <constraint firstItem="eNd-Lf-Xnb" firstAttribute="top" secondItem="yZg-TM-xac" secondAttribute="bottom" constant="16" id="nUR-Sv-gYa"/>
+                <constraint firstItem="tCv-r8-d7f" firstAttribute="centerY" secondItem="eNd-Lf-Xnb" secondAttribute="centerY" id="mFi-QL-lEP"/>
                 <constraint firstItem="5bF-UL-a8f" firstAttribute="leading" secondItem="15l-Sg-8pX" secondAttribute="trailing" constant="16" id="vyH-PK-G4V"/>
+                <constraint firstItem="tCv-r8-d7f" firstAttribute="leading" secondItem="eNd-Lf-Xnb" secondAttribute="trailing" constant="16" id="xF4-wJ-Mq6"/>
                 <constraint firstItem="yZg-TM-xac" firstAttribute="top" secondItem="15l-Sg-8pX" secondAttribute="bottom" constant="18" id="ydc-vA-Oaj"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
                 <outlet property="bigTitleLabel" destination="5bF-UL-a8f" id="ioR-bq-Gou"/>
-                <outlet property="closeButton" destination="dyj-bv-ETM" id="TLd-si-X0i"/>
+                <outlet property="cancelButton" destination="dyj-bv-ETM" id="MVP-ep-9BM"/>
+                <outlet property="closeButton" destination="dyj-bv-ETM" id="EAz-l6-OAM"/>
                 <outlet property="freeAppSpaceButton" destination="tCv-r8-d7f" id="MMP-vi-sbp"/>
                 <outlet property="imageView" destination="15l-Sg-8pX" id="VfM-4e-NhC"/>
                 <outlet property="titleLabel" destination="eNd-Lf-Xnb" id="4XK-lV-EN1"/>
             </connections>
-            <point key="canvasLocation" x="26.399999999999999" y="91.754122938530742"/>
+            <point key="canvasLocation" x="26.399999999999999" y="86.35682158920541"/>
         </view>
     </objects>
     <resources>
-        <image name="iconCancelBorder" width="24" height="24"/>
-        <image name="popupCloudBackup" width="32" height="32"/>
-        <namedColor name="secondaryBackground">
-            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <image name="freeUpCloudBackUp" width="32" height="32"/>
+        <image name="iconCancelUnborderV2" width="24" height="24"/>
+        <namedColor name="tint">
+            <color red="0.0" green="0.4823529411764706" blue="0.6705882352941176" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
