--- a/Depo/Depo/Presentation/SubViews/ViewForPopUp/PopUpSubViews/FreeUpSpacePopUp/FreeUpSpacePopUp.xib
+++ b/Depo/Depo/Presentation/SubViews/ViewForPopUp/PopUpSubViews/FreeUpSpacePopUp/FreeUpSpacePopUp.xib
@@ -7,6 +7,11 @@
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="GT-America-LC-Standard-Bold.ttf">
+            <string>GTAmericaLC-Bd</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -54,14 +59,12 @@
                         <constraint firstAttribute="height" constant="1" id="gxC-aE-vpm"/>
                     </constraints>
                 </view>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tCv-r8-d7f" customClass="WhiteButton" customModule="Billo" customModuleProvider="target">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tCv-r8-d7f" customClass="WhiteButtonWithRoundedCorner" customModule="Billo" customModuleProvider="target">
                     <rect key="frame" x="232" y="81" width="135" height="63"/>
+                    <fontDescription key="fontDescription" name="GTAmericaLC-Bd" family="GT America LC" pointSize="16"/>
                     <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                    <state key="normal" title="Button"/>
-                    <buttonConfiguration key="configuration" style="filled" title="Button">
-                        <fontDescription key="titleFontDescription" name="GTAmericaLC-Md" family="GT America LC" pointSize="16"/>
-                    </buttonConfiguration>
+                    <state key="normal" title="button"/>
                     <connections>
                         <action selector="onTapFreeAppSpaceButton:" destination="iN0-l3-epB" eventType="touchUpInside" id="rpY-Sb-iIF"/>
                     </connections>
