--- a/Depo/Depo/Presentation/UserStories/For You/View/Cells/ForYouCardsCollectionViewCell.xib
+++ b/Depo/Depo/Presentation/UserStories/For You/View/Cells/ForYouCardsCollectionViewCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -43,16 +43,16 @@
                                 </connections>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="aTZ-ct-7cE">
-                                <rect key="frame" x="8" y="40" width="220" height="275"/>
+                                <rect key="frame" x="8" y="40" width="220" height="240"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XvH-tV-bsO">
-                                        <rect key="frame" x="0.0" y="0.0" width="220" height="15"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="220" height="10"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="8"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="68W-ZR-Ga0">
-                                        <rect key="frame" x="0.0" y="25" width="220" height="220"/>
+                                        <rect key="frame" x="0.0" y="20" width="220" height="220"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="EuR-ig-b5T" customClass="LoadingImageView" customModule="Billo" customModuleProvider="target">
                                                 <rect key="frame" x="0.0" y="0.0" width="220" height="220"/>
@@ -83,44 +83,41 @@
                                             <constraint firstItem="EuR-ig-b5T" firstAttribute="top" secondItem="68W-ZR-Ga0" secondAttribute="top" id="kTG-mf-guv"/>
                                         </constraints>
                                     </view>
-                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Chc-ua-G4h">
-                                        <rect key="frame" x="0.0" y="255" width="220" height="20"/>
-                                        <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m3c-8j-Dfg">
-                                                <rect key="frame" x="0.0" y="0.0" width="110" height="20"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="20" id="BQ6-h4-Nn0"/>
-                                                </constraints>
-                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                                <state key="normal" title="Button"/>
-                                                <connections>
-                                                    <action selector="onLeftButton:" destination="gTV-IL-0wX" eventType="touchUpInside" id="UAn-Bv-JP9"/>
-                                                </connections>
-                                            </button>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bdk-Xi-PGi">
-                                                <rect key="frame" x="110" y="0.0" width="110" height="20"/>
-                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                                <state key="normal" title="Button"/>
-                                                <connections>
-                                                    <action selector="onShareButton:" destination="gTV-IL-0wX" eventType="touchUpInside" id="uJV-IK-29K"/>
-                                                </connections>
-                                            </button>
-                                        </subviews>
-                                    </stackView>
                                 </subviews>
                             </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bdk-Xi-PGi">
+                                <rect key="frame" x="182" y="288" width="46" height="30"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="onShareButton:" destination="gTV-IL-0wX" eventType="touchUpInside" id="uJV-IK-29K"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m3c-8j-Dfg">
+                                <rect key="frame" x="8" y="288" width="46" height="30"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="onLeftButton:" destination="gTV-IL-0wX" eventType="touchUpInside" id="UAn-Bv-JP9"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="978-8C-iOb" firstAttribute="leading" secondItem="rIn-WZ-ukg" secondAttribute="leading" constant="8" id="88y-Wg-xKx"/>
                             <constraint firstItem="978-8C-iOb" firstAttribute="top" secondItem="rIn-WZ-ukg" secondAttribute="top" constant="12" id="DoQ-Jh-9W0"/>
+                            <constraint firstItem="bdk-Xi-PGi" firstAttribute="top" secondItem="aTZ-ct-7cE" secondAttribute="bottom" constant="8" id="EDD-pI-LWw"/>
                             <constraint firstItem="aTZ-ct-7cE" firstAttribute="leading" secondItem="rIn-WZ-ukg" secondAttribute="leading" constant="8" id="EeE-dH-5lW"/>
                             <constraint firstItem="Far-r9-Iqz" firstAttribute="leading" secondItem="978-8C-iOb" secondAttribute="trailing" constant="8" id="Gno-lp-c6S"/>
+                            <constraint firstAttribute="bottom" secondItem="bdk-Xi-PGi" secondAttribute="bottom" constant="5" id="Jfy-6D-bE3"/>
                             <constraint firstAttribute="trailing" secondItem="Far-r9-Iqz" secondAttribute="trailing" constant="8" id="M24-aG-QD6"/>
+                            <constraint firstAttribute="trailing" secondItem="bdk-Xi-PGi" secondAttribute="trailing" constant="8" id="YSA-J0-SfX"/>
                             <constraint firstItem="Far-r9-Iqz" firstAttribute="top" secondItem="rIn-WZ-ukg" secondAttribute="top" constant="8" id="aa6-Bv-JUM"/>
-                            <constraint firstAttribute="bottom" secondItem="aTZ-ct-7cE" secondAttribute="bottom" constant="8" id="cHf-Il-Xak"/>
+                            <constraint firstItem="m3c-8j-Dfg" firstAttribute="leading" secondItem="rIn-WZ-ukg" secondAttribute="leading" constant="8" id="eVq-cn-KIg"/>
                             <constraint firstAttribute="trailing" secondItem="aTZ-ct-7cE" secondAttribute="trailing" constant="8" id="fwj-2s-3qn"/>
+                            <constraint firstAttribute="bottom" secondItem="m3c-8j-Dfg" secondAttribute="bottom" constant="5" id="h4t-g2-B6W"/>
                             <constraint firstItem="aTZ-ct-7cE" firstAttribute="top" secondItem="978-8C-iOb" secondAttribute="bottom" constant="8" id="pvx-WM-8An"/>
+                            <constraint firstItem="m3c-8j-Dfg" firstAttribute="top" secondItem="aTZ-ct-7cE" secondAttribute="bottom" constant="8" id="tB3-Eb-IBz"/>
                         </constraints>
                     </view>
                 </subviews>
