--- a/Depo/Depo/Presentation/UserStories/Settings/Settings/Cells/SettingsTableViewCell.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/Settings/Cells/SettingsTableViewCell.xib
@@ -1,12 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="GT-America-LC-Standard-Bold.ttf">
+            <string>GTAmericaLC-Bd</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -18,7 +24,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cfb-mJ-gqh">
-                        <rect key="frame" x="13" y="20" width="255" height="21"/>
+                        <rect key="frame" x="13" y="20" width="235" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="gK4-Yo-F8o"/>
                         </constraints>
@@ -27,7 +33,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iconArrowRightsmall" translatesAutoresizingMaskIntoConstraints="NO" id="zww-Vg-7eJ">
-                        <rect key="frame" x="278" y="18.5" width="24" height="24"/>
+                        <rect key="frame" x="288" y="18.5" width="24" height="24"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="24" id="JKO-Pz-j2U"/>
                             <constraint firstAttribute="height" constant="24" id="pUs-nD-Non"/>
@@ -40,30 +46,53 @@
                             <constraint firstAttribute="height" constant="1" id="QDF-4T-JzD"/>
                         </constraints>
                     </view>
+                    <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="8ia-kS-mAY">
+                        <rect key="frame" x="262" y="20.5" width="21" height="20"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="tintColor" systemColor="systemRedColor"/>
+                    </imageView>
+                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="3" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="koQ-vp-gF0">
+                        <rect key="frame" x="269" y="23" width="7.5" height="15.5"/>
+                        <fontDescription key="fontDescription" name="GTAmericaLC-Bd" family="GT America LC" pointSize="12"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="Ohf-zT-JDN" secondAttribute="trailing" id="1Vr-uN-TrA"/>
-                    <constraint firstAttribute="trailing" secondItem="zww-Vg-7eJ" secondAttribute="trailing" constant="18" id="B56-yl-oJD"/>
+                    <constraint firstItem="8ia-kS-mAY" firstAttribute="bottom" secondItem="cfb-mJ-gqh" secondAttribute="bottom" id="1mb-qF-NHR"/>
+                    <constraint firstAttribute="trailing" secondItem="zww-Vg-7eJ" secondAttribute="trailing" constant="8" id="B56-yl-oJD"/>
                     <constraint firstItem="cfb-mJ-gqh" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="DuW-t8-KhW"/>
                     <constraint firstItem="zww-Vg-7eJ" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="OTd-O2-B2C"/>
-                    <constraint firstItem="zww-Vg-7eJ" firstAttribute="leading" secondItem="cfb-mJ-gqh" secondAttribute="trailing" constant="10" id="WFR-hS-4XO"/>
+                    <constraint firstItem="8ia-kS-mAY" firstAttribute="leading" secondItem="cfb-mJ-gqh" secondAttribute="trailing" constant="14" id="Q1W-4Z-Z9D"/>
+                    <constraint firstItem="koQ-vp-gF0" firstAttribute="centerY" secondItem="8ia-kS-mAY" secondAttribute="centerY" id="VVA-Lp-gVx"/>
+                    <constraint firstItem="zww-Vg-7eJ" firstAttribute="leading" secondItem="cfb-mJ-gqh" secondAttribute="trailing" constant="40" id="WFR-hS-4XO"/>
+                    <constraint firstItem="zww-Vg-7eJ" firstAttribute="leading" secondItem="8ia-kS-mAY" secondAttribute="trailing" constant="5" id="fDq-Fu-jFW"/>
                     <constraint firstItem="Ohf-zT-JDN" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="13" id="i75-pY-QVT"/>
                     <constraint firstAttribute="bottom" secondItem="Ohf-zT-JDN" secondAttribute="bottom" id="k16-EF-mJH"/>
+                    <constraint firstItem="8ia-kS-mAY" firstAttribute="top" secondItem="cfb-mJ-gqh" secondAttribute="top" id="k5T-DL-U0L"/>
+                    <constraint firstItem="8ia-kS-mAY" firstAttribute="centerX" secondItem="koQ-vp-gF0" secondAttribute="centerX" id="q4i-sp-j59"/>
                     <constraint firstItem="cfb-mJ-gqh" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="13" id="wT7-gn-Wm0"/>
                 </constraints>
             </tableViewCellContentView>
             <color key="backgroundColor" name="secondaryBackground"/>
             <connections>
+                <outlet property="notificationCount" destination="koQ-vp-gF0" id="rvP-KU-dgj"/>
+                <outlet property="notificationImage" destination="8ia-kS-mAY" id="HLb-r9-ba6"/>
                 <outlet property="separatorView" destination="Ohf-zT-JDN" id="67p-mU-Oy2"/>
                 <outlet property="titleLabel" destination="cfb-mJ-gqh" id="IDm-Ns-Cr2"/>
             </connections>
-            <point key="canvasLocation" x="32" y="52.5"/>
+            <point key="canvasLocation" x="32" y="51.724137931034484"/>
         </tableViewCell>
     </objects>
     <resources>
+        <image name="circle.fill" catalog="system" width="128" height="123"/>
         <image name="iconArrowRightsmall" width="24" height="24"/>
         <namedColor name="secondaryBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
     </resources>
 </document>
